src/Dropdown.css
.btn-default {
    background-color: #f4f4f4 !important;
}

.open {
    display: block;
    /*margin-left: inherit !important;*/
    padding-left: inherit !important;
}

.dropdown-menu {
    /*top: 3%;
    padding: 5px 2px;*/
    position: absolute;

    top: 100%;
    left: 0;
    z-index: 1000;
    float: left;
    min-width: 160px;
    padding: 10px 0px 5px 0px;
    margin: 3px 0 0;
    font-size: 14px;
    text-align: left;
    list-style: none;
    background-color: #fff;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
    border: 1px solid #ccc;
    border: 1px solid rgba(0, 0, 0, .15);
    border-radius: 4px;
    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
    
}

.dropdown-menu.inner {
    position: static;
    border: 0;
    padding: 0;
    margin: 0;
    border-radius: 0;
    box-shadow: none;
    overflow-y: auto;
    max-height: 150px;
}

.dropdown-menu>ul {
    width: 100%;
}

.dropdown-menu>li>a {
    width: 100%;
    padding-right: 0px;
}
.dropdown-menu>li>a:hover {
     background-color: #e1e3e9;
    color: #333;
}

.dropdown-menu>li>a>span {
    /*position: absolute;*/
    float: right;
    display: inline-block;
    right: 15px;
    margin-top: 5px;
}

.bs-searchbox {
    padding-right: 10px;
    padding-left: 10px;
    padding-bottom: 4px;
}

.bs-actionsbox {
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 4px;
}

.input-box {
    width:200px;
    position:relative;
}

.button-dropdown {
    width:100%;
}

.btn .caret {
    margin-left: 0;
    float: right;
    margin-top: 9px;
}

.select-all-button {
    width: 47.5%;
    margin-right: 2.5% !important;
	padding: 3%;
}

.deselect-all-button {
    width: 47.5%;
	margin-left: 2.5% !important;
	text-align: center;
	padding: 3%;
}

.btn-group > .btn:last-child:not(:first-child), .btn-group > .dropdown-toggle:not(:first-child) {
    border-top-left-radius: 4px !important;
    border-bottom-left-radius: 4px !important;
    /*padding: 0px;*/
}

.btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
    border-top-right-radius: 4px !important;
    border-bottom-right-radius: 4px !important;
    /*padding: 0px;*/
}

.hide {
    display: none
}

